---
source: starstream-compiler/src/typecheck/tests.rs
assertion_line: 71
description: "Source:\n\nlet x = 1;\nlet y = 2;\nlet z = x + y;\nif (z > 2) {\n  z = z + 1;\n}\nz;\n"
---
T-Let: {} ⊢ let x = 1; ⇒ i64
  T-Int: {} ⊢ 1 ⇒ i64

T-Let: {x: i64} ⊢ let y = 2; ⇒ i64
  T-Int: {x: i64} ⊢ 2 ⇒ i64

T-Let: {x: i64, y: i64} ⊢ let z = x + y; ⇒ i64
  T-Bin-Add: {x: i64, y: i64} ⊢ x + y ⇒ i64
    T-Var: {x: i64, y: i64} ⊢ x ⇒ i64
    T-Var: {x: i64, y: i64} ⊢ y ⇒ i64
    Unify-Const: i64 ~ i64 => {}
    Unify-Const: i64 ~ i64 => {}

T-If: {x: i64, y: i64, z: i64} ⊢ if (z > 2) {
    z = z + 1;
} ⇒ ()
  T-Bin-Gt: {x: i64, y: i64, z: i64} ⊢ z > 2 ⇒ bool
    T-Var: {x: i64, y: i64, z: i64} ⊢ z ⇒ i64
    T-Int: {x: i64, y: i64, z: i64} ⊢ 2 ⇒ i64
    Check-Compare: i64 vs i64 => ok (int)
  Unify-Const: bool ~ bool => {}
  T-Assign: {x: i64, y: i64, z: i64} ⊢ z = z + 1; ⇒ i64
    T-Bin-Add: {x: i64, y: i64, z: i64} ⊢ z + 1 ⇒ i64
      T-Var: {x: i64, y: i64, z: i64} ⊢ z ⇒ i64
      T-Int: {x: i64, y: i64, z: i64} ⊢ 1 ⇒ i64
      Unify-Const: i64 ~ i64 => {}
      Unify-Const: i64 ~ i64 => {}
    Unify-Const: i64 ~ i64 => {}

T-Expr: {x: i64, y: i64, z: i64} ⊢ z; ⇒ ()
  T-Var: {x: i64, y: i64, z: i64} ⊢ z ⇒ i64
